[project]
name = "tibber-mcp"
version = "0.1.0"
description = "Tibber MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "mcp>=1.1.0",
 "pytibber>=0.30.8",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
tibber-mcp = "tibber_mcp:main"
